# lilio

./: .bumpversion.cfg  .flake8  .howfairis.yml  .zenono.json  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  setup.cfg  sonar-project.properties
.githooks/: pre-commit
.github/workflows/: build.yml  documentation.yml  python-publish.yml  sonarcloud.yml
docs/: CONTRIBUTING.md  Makefile  README.dev.md  conf.py  dask_integration.md  index.rst  make.bat  project_setup.md
docs/notebooks/: all_about_the_calendar.ipynb  calendar_shorthands.ipynb  tutorial_calendar_shifter.ipynb  tutorial_resampling_data.ipynb  tutorial_traintest.ipynb
lilio/: __init__.py  _attrs.py  _bokeh_plots.py  _plot.py  _resample.py  calendar.py  calendar_shifter.py  calendar_shorthands.py  resampling.py  time.py  traintest.py  utils.py
notebooks/: all_about_the_calendar.ipynb
tests/: __init__.py  test_calendar.py  test_calendar_shifter.py  test_custom_calendar.py  test_fit_year.py  test_plots.py  test_resample.py  test_time.py  test_traintest.py
tests/test_data/: era5_dummy_2000.nc  era5_dummy_2001.nc  era5_dummy_2002.nc  generate_test_data.py
